--- a/scripts/notebooks/samenvoegen json files.ipynb
+++ b/scripts/notebooks/samenvoegen json files.ipynb
@@ -198,7 +198,48 @@
    "id": "72e81baa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_and_combine_json(folder_path):\n",
+    "    # Get the list of JSON files in the folder\n",
+    "    file_list = [file for file in os.listdir(folder_path) if file.endswith('.json')]\n",
+    "\n",
+    "    # Initialize an empty list to store the dataframes\n",
+    "    dfs = []\n",
+    "\n",
+    "    # Iterate over each JSON file and load it into a dataframe\n",
+    "    for file in tqdm(file_list, desc='Loading JSON files'):  # Add a progress bar with tqdm\n",
+    "        file_path = os.path.join(folder_path, file)\n",
+    "        df = pd.read_json(file_path, typ='series')  # Load the JSON file as a Series\n",
+    "        df = pd.DataFrame([df])  # Convert the Series to a DataFrame\n",
+    "        filename_without_extension = file[:-5]  # Remove the last 4 characters\n",
+    "        df['date_String'] = filename_without_extension  # Add a 'filename' column\n",
+    "        df.set_index('date_String', inplace=True)  # Set the 'filename' column as the index\n",
+    "\n",
+    "        # Check if 'date' column exists\n",
+    "        if 'date' in df.columns:\n",
+    "            # Convert the 'date' column to datetime and extract day, month, and year\n",
+    "            df['date'] = pd.to_datetime(df['date'])\n",
+    "            # df['day'] = df['date'].dt.day\n",
+    "            # df['month'] = df['date'].dt.month\n",
+    "            # df['year'] = df['date'].dt.year\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        dfs.append(df)\n",
+    "\n",
+    "    # Combine all dataframes into one\n",
+    "    combined_df = pd.concat(dfs)\n",
+    "\n",
+    "     # Rename 'date' column to 'date_datetime'\n",
+    "    combined_df.rename(columns={'date': 'date_datetime'}, inplace=True)\n",
+    "    \n",
+    "    return combined_df\n",
+    "\n",
+    "\n",
+    "combined_df_BRU = load_and_combine_json(\"../../data/Production/daily/BRU\")\n",
+    "combined_df_STO = load_and_combine_json(\"../../data/Production/daily/STO\")"
+   ]
   }
  ],
  "metadata": {
