clean productie proces ipynb

--- a/scripts/notebooks/1_Productieproces.ipynb
+++ b/scripts/notebooks/1_Productieproces.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "1      STO   274"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading JSON files: 100%|██████████| 1830/1830 [00:07<00:00, 258.76it/s]\n"
+      "Loading JSON files: 100%|██████████| 1830/1830 [00:07<00:00, 252.03it/s]\n"
      ]
     },
     {
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading JSON files: 100%|██████████| 1830/1830 [00:07<00:00, 260.41it/s]\n"
+      "Loading JSON files: 100%|██████████| 1830/1830 [00:07<00:00, 256.11it/s]\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "[3660 rows x 10 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,11 +421,16 @@
    "source": [
     "QUESTION : Onderzoek en bepaal een geschikte kansverdeling die het beste past bij de kenmerken van het\n",
     "productieproces op een dag dat er normaalgesproken gewone productie zou moeten zijn op basis van de\n",
-    "gegevens. Je mag hierbij uitgaan van het volgende:\n",
+    "gegevens.\n",
+    "\n",
+    "Je mag hierbij uitgaan van het volgende:\n",
+    "\n",
     "De dagen waarop we weten dat er geen productie is, hoeven niet mee in de kansverdeling te worden\n",
     "gestoken.\n",
+    "\n",
     "Maak een onderscheid tussen de dagen met 0 productie en de dagen met reguliere productie dient wel\n",
     "gemaakt te worden, dus in je kansverdeling heb je gewoon een bepaalde kans op 0 productie.\n",
+    "\n",
     "Voor de dagen met productie mag je veronderstellen dat de productie normaal verdeeld is, je kan dus\n",
     "scipy.stats.norm.fit(data) gebruiken om de parameters van de beste normale verdeling te\n",
     "vinden."
@@ -438,51 +443,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dagen geen productie in BRU 402\n"
+     ]
+    }
+   ],
    "source": [
-    "# Bekijk alle unieke waarden in kolom 'col1'\n",
-    "unique_values = df_all['production'].unique()\n",
-    "# print(\"Alle waarden in kolom 'production':\", unique_values)\n",
-    "\n",
-    "# Zoek naar waarde 'a' in het hele DataFrame\n",
-    "value_to_find = '#MV'\n",
-    "rows_with_value = df_all.isin([value_to_find]).any(axis=1)\n",
-    "\n",
-    "# Controleer of de waarde voorkomt in een van de cellen van het DataFrame\n",
-    "is_value_present = (df_all == value_to_find).any().any()\n",
-    "\n",
-    "if is_value_present:\n",
-    "    print(\"De waarde '{}' komt voor in het DataFrame.\".format(value_to_find))\n",
-    "    for index, row in df_all[rows_with_value].iterrows():\n",
-    "        print(\"Rij {}: {}\".format(index, row.tolist()))\n",
-    "\n",
-    "df_all.replace('#MV', 0, inplace=True)\n",
-    "\n",
-    "# Bekijk het datatype van elke kolom\n",
-    "# print(\"Data types of each column:\")\n",
-    "# print(df_all.dtypes)\n",
+    "# We verwijderen alle dagen zonder productie om de kansverdeling te bekijken\n",
+    "# Bekijk alle unieke waarden in de productie kolom'\n",
+    "unique_values =  df_all['production'].unique()\n",
+    "# print(\"Unieke waarden in de productie kolom: {}\".format(unique_values))\n",
+    "# Even controleren in welke rijen en hoevaak deze waarde #MV voorkomt.\n",
+    "count_MV = df_all['production'].value_counts().get('#MV', 0)\n",
     "\n",
     "\n",
-    "# Filter de gegevens om alleen dagen met reguliere productie te behouden\n",
-    "df_filtered_BRU = df_all[df_all.isin(['BRU']).any(axis=1)]\n",
+    "# vervang MV met 0 zodat we met de Int64 kunnen werken maar behoud originele dataframe\n",
+    "df_all_0 = df_all.copy()\n",
+    "df_all_0.replace('#MV', 0, inplace=True)\n",
+    "\n",
+    "\n",
+    "# Filter de gegevens om alleen dagen met productie in Brussel en reguliere productie te behouden\n",
+    "df_filtered_BRU = df_all_0[df_all_0.isin(['BRU']).any(axis=1)]\n",
     "df_regular_production_BRU = df_filtered_BRU[df_filtered_BRU['production'] > 0]\n",
-    "# print(df_filtered_BRU)\n",
     "\n",
-    "# kans op 0 \n",
-    "count_O = (df_filtered_BRU['production'] == 0).sum()\n",
+    "\n",
+    "\n",
+    "# kans op 0 in bru \n",
+    "count_0 = df_filtered_BRU['production'].value_counts().get(0, 0)\n",
+    "print (\"dagen geen productie in BRU\", count_0)\n",
     "total_values = len(df_filtered_BRU['production'])\n",
+    "percentage_O = (count_0 / total_values) * 100\n",
     "\n",
-    "# Calculate percentage of '0' in column 'col1'\n",
-    "percentage_O = (count_O / total_values) * 100\n",
-    "# print(percentage_O)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -503,16 +513,22 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dit plotje toont een skewed verdeling waarbij de meeste dagen een productie van rond de 1000 wordt gehaald en slechts enkele dagen een lage productieonder 800 wordt gehaald\n"
+     ]
     }
    ],
    "source": [
     "\n",
-    "# Bepaal de parameters van de beste normale verdeling voor de productie op deze dagen\n",
+    "# Bepaal de parameters van de beste normale verdeling voor de productie op de reguliere dagen\n",
+    "# we mogen uitgaaan van een normaal verdeling\n",
     "mu, sigma = norm.fit(df_regular_production_BRU['production'])\n",
     "\n",
-    "\n",
     "print(\"Percentage of 'O'\", percentage_O)\n",
-    "\n",
     "print(\"Gemiddelde (mu):\", mu)\n",
     "print(\"Standaardafwijking (sigma):\", sigma)\n",
     "\n",
@@ -532,51 +548,40 @@
     "plt.ylabel('Frequentie')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(\"Dit plotje toont een skewed verdeling waarbij de meeste dagen een productie van rond de 1000 wordt gehaald en slechts enkele dagen een lage productieonder 800 wordt gehaald\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Maak een Python-programma dat het productieproces kan simuleren over een door de gebruiker bepaalde\n",
-    "periode, n dagen. Het programma moet de gebruiker flexibiliteit bieden om de duur van de simulatie te\n",
-    "kiezen. Het simulatieprogramma mag veronderstellen dat er op alle n dagen normaalgesproken productie zou\n",
+    "QUESTION: Maak een Python-programma dat het productieproces kan simuleren over een door de gebruiker bepaalde\n",
+    "periode, n dagen.\n",
+    "\n",
+    "Het programma moet de gebruiker flexibiliteit bieden om de duur van de simulatie te\n",
+    "kiezen. \n",
+    "\n",
+    "Het simulatieprogramma mag veronderstellen dat er op alle n dagen normaalgesproken productie zou\n",
     "moeten zijn, maar elke dag heeft wel een kans om 0 productie te hebben."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gesimuleerde productie over 10 dagen:\n",
-      "Dag 1: 916.94\n",
-      "Dag 2: 995.23\n",
-      "Dag 3: 875.63\n",
-      "Dag 4: 982.21\n",
-      "Dag 5: 905.42\n",
-      "Dag 6: 0.00\n",
-      "Dag 7: 945.26\n",
-      "Dag 8: 993.47\n",
-      "Dag 9: 0.00\n",
-      "Dag 10: 930.43\n",
-      "[916.9394808279828, 995.2280957041779, 875.626486813201, 982.2136490015625, 905.4171235572726, 0, 945.2634444265013, 993.4675608317494, 0, 930.4265797232658]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'ECDFResult' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[70], line 50\u001b[0m\n\u001b[0;32m     47\u001b[0m xx \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;28mmin\u001b[39m(ecdc_data), \u001b[38;5;28mmax\u001b[39m(ecdc_data), \u001b[38;5;241m100\u001b[39m)\n\u001b[0;32m     49\u001b[0m \u001b[38;5;66;03m# Evaluate the ECDF at the x-values\u001b[39;00m\n\u001b[1;32m---> 50\u001b[0m Fxx \u001b[38;5;241m=\u001b[39m ecdf_result(xx)\n\u001b[0;32m     52\u001b[0m \u001b[38;5;66;03m# Plot ECDF\u001b[39;00m\n\u001b[0;32m     53\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'ECDFResult' object is not callable"
+      "Gesimuleerde productie over 5 dagen:\n",
+      "Dag 1: 0.00\n",
+      "Dag 2: 1020.84\n",
+      "Dag 3: 0.00\n",
+      "Dag 4: 1059.76\n",
+      "Dag 5: 1082.63\n"
      ]
     }
    ],
@@ -608,12 +613,11 @@
     "\n",
     "\n",
     "# Input van de gebruiker voor het aantal dagen om te simuleren\n",
-    "days = 10\n",
+    "days = int(input(\"Hoeveel dagen wil je simuleren? \"))\n",
     "\n",
-    "# Input van de gebruiker voor de kans op 0 productie op een dag\n",
     "zero_production_prob = percentage_O / 100\n",
     "\n",
-    "# Simuleer het productieproces\n",
+    "# # Simuleer het productieproces\n",
     "ecdc_data = production_simulated = simulate_production(days, mu, sigma, zero_production_prob)\n",
     "\n",
     "# Toon de gesimuleerde productiewaarden\n",
@@ -621,25 +625,25 @@
     "for day, production in enumerate(production_simulated, start=1):\n",
     "    print(\"Dag {}: {:.2f}\".format(day, production))\n",
     "\n",
-    "print(ecdc_data)\n",
+    "# print(ecdc_data)\n",
     "\n",
-    "# Compute the empirical cumulative distribution function (ECDF)\n",
-    "ecdf_result = ecdf(ecdc_data)\n",
+    "# # Compute the empirical cumulative distribution function (ECDF)\n",
+    "# ecdf_result = ecdf(ecdc_data)\n",
     "\n",
-    "# Generate x-values for plotting\n",
-    "xx = np.linspace(min(ecdc_data), max(ecdc_data), 100)\n",
+    "# # Generate x-values for plotting\n",
+    "# xx = np.linspace(min(ecdc_data), max(ecdc_data), 100)\n",
     "\n",
-    "# Evaluate the ECDF at the x-values\n",
-    "Fxx = ecdf_result(xx)\n",
+    "# # Evaluate the ECDF at the x-values\n",
+    "# Fxx = ecdf_result(xx)\n",
     "\n",
-    "# Plot ECDF\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(xx, Fxx, marker='o', linestyle='-')\n",
-    "plt.title('Empirische Cumulatieve Distributiefunctie (ECDF)')\n",
-    "plt.xlabel('Productie')\n",
-    "plt.ylabel('Cumulatieve kans')\n",
-    "plt.grid(True)\n",
-    "plt.show()"
+    "# # Plot ECDF\n",
+    "# plt.figure(figsize=(10, 6))\n",
+    "# plt.plot(xx, Fxx, marker='o', linestyle='-')\n",
+    "# plt.title('Empirische Cumulatieve Distributiefunctie (ECDF)')\n",
+    "# plt.xlabel('Productie')\n",
+    "# plt.ylabel('Cumulatieve kans')\n",
+    "# plt.grid(True)\n",
+    "# plt.show()"
    ]
   }
  ],
