--- a/scripts/notebooks/autoproductie_v02.ipynb
+++ b/scripts/notebooks/autoproductie_v02.ipynb
@@ -623,7 +623,7 @@
     "</style>\n",
     "\n",
     "<div class=\"black\"> \n",
-    "<br>\n",
+    "<h3> Extra probeersel:</h3>\n",
     "Ik heb nog even wat extra opgezocht om te checken of onze dataset van tweedehands electrische Volvo's representatief is voor alle Volvo's (benzine, hybrid, electrisch) binnen onze dataset.<br> <br>\n",
     "Daarvoor heb ik ook het betrouwbaarheidsinterval van alle Volvo's binnen onze dataset berekent (35526.87424353326, 36073.522280637735) en je ziet direct dat beide betrouwbaarheidsintervallen niet binnen elkaar liggen. <br> <br>\n",
     "\n",
